--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://acedeywin.github.io/confusion",
   "name": "coursera-react",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
@@ -17,9 +19,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.6.0",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
